--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
 <title>離床警報器</title>
-<link rel="Shortcut Icon" href="Images/16.png>
+<link rel="Shortcut Icon" href="Images/16.png">
 <link rel="stylesheet" type="text/css" href="CSS.css">
 </head>
 <!--body backgroundcolo="https://goo.gl/qrcyTE" style="background-color:EE7600;"-->
