--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <title>離床警報器</title>
 <link rel="Shortcut Icon" href="Images/16.png">
 <link rel="stylesheet" type="text/css" href="CSS.css">
+<link rel="apple-touch-icon" sizes="180x180" href="icon.png">
 </head>
 <!--body backgroundcolo="https://goo.gl/qrcyTE" style="background-color:EE7600;"-->
 <body bgcolor="#E6E6FA">
