--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script src=pwa_service/pwabuilder-sw.js></script>
 <script src=pwa_service/pwabuilder-sw-register.js></script>
 <script src="manup.js"></script>
-
+<link rel="alternate" href="manifest.json"></link>
 
 <html>
 <head>
